--- a/mediamgr/templates/new_shows.html
+++ b/mediamgr/templates/new_shows.html
@@ -40,4 +40,8 @@
     </table>
 </form>
 
+
+<form action="{{ url_for('clr_new_show') }}" method="POST">
+    <input style="margin-top: 50px;" type="submit" value="Clear New Show List">
+</form>
 {% endblock %}
