--- a/mediamgr/templates/episodes.html
+++ b/mediamgr/templates/episodes.html
@@ -1,6 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1>TV Episodes</h1>
-    <b>-- Not Implemented --</b>
+<h1>TV Episodes</h1>
+<b>-- Not Implemented --</b>
+
+{% for text in texts %}
+<p>
+    {{ text }}
+</p>
+{% endfor %}
+
 {% endblock %}
