--- a/mediamgr/templates/episodes.html
+++ b/mediamgr/templates/episodes.html
@@ -4,9 +4,17 @@
 <h1>TV Episodes</h1>
 <b>-- Not Implemented --</b>
 
+<h3>Texts</h3>
 {% for text in texts %}
 <p>
     {{ text }}
+</p>
+{% endfor %}
+
+<h3>Entries</h3>
+{% for entry in entries %}
+<p>
+    {{ entry }}
 </p>
 {% endfor %}
 
