--- a/mediamgr/templates/layout.html
+++ b/mediamgr/templates/layout.html
@@ -16,6 +16,7 @@
                            <a href="{{ url_for('add_shows') }}">[Add Shows]</a>
                            <a href="{{ url_for('update_shows') }}">[Update Shows]</a>
                            <a href="{{ url_for('list_shows') }}">[List Shows]</a>
+                           <a href="{{ url_for('read_media_tv') }}">[Read Media]</a>
     </div>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
